bynkc/tests/fixtures/negative/102_list_flatmap_not_list/input.bynk
commons c {
  fn bad(xs: List[Int]) -> List[Int] {
    xs.flatMap((x) => x)
  }
}
